--- a/_layouts/subtitlepost.html
+++ b/_layouts/subtitlepost.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <article class="subtitlepost">
-  <h1>{{ page.title }}</h1>
-  <h4>{{ page.subtitle }}</h4>
+  <div style="line-height:0px;><h1>{{ page.title }}</h1>
+              <h4>{{ page.subtitle }}</h4></div>
 
   <div class="entry">
     {{ content }}
