--- a/_layouts/subtitlepost.html
+++ b/_layouts/subtitlepost.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="subtitlepost">
   <div style="line-height:0px;><h1>{{ page.title }}</h1>
-              <h4>{{ page.subtitle }}</h4></div>
+              <h4>{{ page.subtitle }}</h4></div style="line-height:normal;>
 
   <div class="entry">
     {{ content }}
