--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/tagpage">Tags</a>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Home</a>
+            <a href="{{ site.baseurl }}/tagbrowser">Tags</a>
+            <a href="{{ site.baseurl }}/articles">Articles</a>
+            <a href="{{ site.baseurl }}/projects">Projects</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
