--- a/_layouts/subtitlepost.html
+++ b/_layouts/subtitlepost.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <article class="subtitlepost">
-  <div><h1">{{ page.title }}</h1><h4 style="line-height:0px;>
-              {{ page.subtitle }}</h4></div>
+  <div><h1 style="line-height:0px;">{{ page.title }}</h1>
+              <h4>{{ page.subtitle }}</h4></div>
 
   <div class="entry">
     {{ content }}
