--- a/_layouts/subtitlepost.html
+++ b/_layouts/subtitlepost.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <article class="subtitlepost">
-  <div style = "display: inline;"><h1>{{ page.title }}</h1>
+  <div><h1 style = "display: inline;">{{ page.title }}</h1>
     <h4>{{ page.subtitle }}</h4></div>
-
++
   <div class="entry">
     {{ content }}
   </div>
