--- a/_layouts/subtitlepost.html
+++ b/_layouts/subtitlepost.html
@@ -3,8 +3,9 @@ layout: default
 ---
 
 <article class="subtitlepost">
-  <div><h1 style="display:inline;">{{ page.title }}</h1><h4 style="display:inline;">{{ page.subtitle }}</h4></div>
--
+  <div><h1 style="display:inline;">{{ page.title }}</h1>
+    <h4 style="display:inline;">{{ page.subtitle }}</h4></div>
+
   <div class="entry">
     {{ content }}
   </div>
