--- a/_layouts/subtitlepost.html
+++ b/_layouts/subtitlepost.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="subtitlepost">
-  <div><h1 style="display:inline;">{{ page.title }}</h1>
+  <div><h1 style="display:inline;">{{ page.title }}</h1><br>
     <h4 style="display:inline;">{{ page.subtitle }}</h4></div>
 
   <div class="entry">
