--- a/style.scss
+++ b/style.scss
@@ -271,14 +271,28 @@ nav {
   }
 }
 
-.subtitlepost {
+.subtitlepost {	
   blockquote {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 40px;
-    margin-inline-end: 40px;
+    background:	#f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    padding: .5em 10px;
+    quotes: "\201C""\201D""\2018""\2019";
   }
+	
+  blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 4em;
+    line-height: .1em;
+    margin-right: .25em;
+    vertical-align: -.4em;
+  }
+	
+  blockquote p {
+    display: inline;
+  }
+	
 
   .comments {
     margin-top: 10px;
