--- a/style.scss
+++ b/style.scss
@@ -277,7 +277,7 @@ nav {
     border-left: 10px solid #ccc;
     margin: 1.5em 10px;
     padding: .5em 10px;
-    quotes: "\201C""\201D""\2018""\2019";
+    quotes: "";
   }
 	
   blockquote:before {
